--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
         }
     </script>
         <script>
-function loginStudent() {
+function login() {
     const civilId = document.getElementById("civilId").value.trim();
 
     if (civilId === "") {
@@ -1755,6 +1755,7 @@ function loginStudent() {
 
 </body>
 </html>
+
 
 
 
