--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                             </div>
                         </div>
                         
-                        <button onclick="loginStudent()" class="btn btn-primary" id="loginBtn" style="width: 100%;">
+                        <button onclick="login()" class="btn btn-primary" id="loginBtn" style="width: 100%;">
                             <i class="fas fa-sign-in-alt"></i> دخول إلى المنصة
                         </button>
                         
@@ -1755,6 +1755,7 @@ function login() {
 
 </body>
 </html>
+
 
 
 
