--- a/exam.html
+++ b/exam.html
@@ -58,7 +58,7 @@
 <button onclick="submitExam()">📤 إرسال الإجابات</button>
 
 <script>
-const API = "ضع رابط السكربت هنا";
+const API = "https://script.google.com/macros/s/AKfycbw6GJLmABLnLN3UNU9uIe_BJAI1xUXsdY08d6-wDhhbzvR0uYV_G53BJSTsy6r5boE4/exec";
 
 // تحميل بيانات الطالب
 document.getElementById("studentName").innerText = localStorage.getItem("studentName");
